hphp/hack/test/typecheck/instanceof/instanceof_static_with_reqs.php.exp
File "instanceof_static_with_reqs.php", line 10, characters 5-19:
  object
File "instanceof_static_with_reqs.php", line 17, characters 5-19:
  <static> as this as BaseField<T>
File "instanceof_static_with_reqs.php", line 26, characters 7-21:
  INeedsFoo<^[unresolved]>
File "instanceof_static_with_reqs.php", line 30, characters 5-19:
  ^(INeedsFoo<^(_)> | <static> as this as BaseField<T>)
File "instanceof_static_with_reqs.php", line 31, characters 12-17:
Invalid return type (Typing[4110])
File "instanceof_static_with_reqs.php", line 7, characters 49-52:
This is the expression dependent type <static>
File "instanceof_static_with_reqs.php", line 7, characters 49-52:
  where '<static>' refers to the late bound type of the enclosing class
File "instanceof_static_with_reqs.php", line 23, characters 27-35:
It is incompatible with an object of type INeedsFoo
